# wasm-component-http-request

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml  build.sh  spin.toml
example/src/: lib.rs
example/wit/: world.wit
src/: lib.rs
wit/: world.wit
