[package]
name = "rekuest"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "io-util", "rt", "time"] }
anyhow = "1"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
http = "1"
wasi = "0.13.0"
futures = "0.3"
url = "2.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "seungjin:pouch"

[package.metadata.component.dependencies]

[package.metadata.componenet.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
